# GCRI

./: .gitignore  IIoT_Blockchain_PPT_Outline.txt  MANIFEST.in  MENIFEST.in  README.md  apache_poi_podcast_script.txt  debug_inspect_args.py  devops_document.txt  edit_distance.py  hello_world.py  hypothesis1.txt  introduction.md  introduction_chapter.txt  lcs.py  lis.py  main.py  pyproject.toml  python314_summary.md  requirements.txt  revised_introduction.txt  solution.py  task.py  task_func.py  task_module.py  thesis_defense_ppt_outline.txt
Writings/: gcri_architecture.md  gcri_paper2_en.md  gcri_paper2_ko.md
docker/: Dockerfile.sandbox
gcri/: __init__.py  config.py  entry.py  launch_gcri.py  main.py  main_planner.py
logs 2/: 2026-01-04T06-25-26+00-00_gcri-bigcodebench_3rydGvZUfQnEi7iYHG5tdj.eval  2026-01-04T06-30-51+00-00_gcri-bigcodebench_jYt9Jc6A2AdpjonMt5TPZY.eval  2026-01-04T06-36-50+00-00_gcri-bigcodebench_FkW3eeENFUtPNKpxDJZTtn.eval  2026-01-04T06-40-40+00-00_gcri-bigcodebench_Me4j5RyrWD8WgoJGMy2jB4.eval  2026-01-04T06-43-17+00-00_gcri-bigcodebench_h6kK8e9xk2SDNh2ydFduxN.eval  2026-01-04T08-41-51+00-00_gcri-paperbench_5S3LWMYnZtuzpw6rEx3YmH.eval  2026-01-04T08-49-13+00-00_gcri-paperbench_QXKqgD6DpDtcDxcJNocMqW.eval  2026-01-04T09-24-29+00-00_gcri-paperbench_UG3uFo878mix8jiD4ZxZhf.eval  2026-01-04T12-00-37+00-00_gcri-writingbench_XF2uwqAKVnn6FopWzooRn2.eval  2026-01-04T12-01-46+00-00_gcri-writingbench_XHdxBuwLr5hYWPGMH7GhZG.eval  2026-01-04T12-14-41+00-00_gcri-writingbench_jJWVmXPkHVf2JAi9QcYjhd.eval  (+8 more)
presets/: claude_balanced.json  claude_deep_research.json  (+22 more)
(+153 files in other folders)
