[project]
name = "gcri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ato>=2.1.6",
    "langchain>=1.0.5",
    "langchain-anthropic>=1.2.0",
    "langchain-google>=0.1.1",
    "langchain-google-genai>=3.2.0",
    "langchain-google-vertexai>=3.1.1",
    "langchain-openai>=1.1.0",
]
